--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -5,3 +5,5 @@ addconf.theme = Nezadal jsi t\u00E9ma konference.
 addconf.month = Nezadal jsi m\u011Bs\u00EDc kon\u00E1n\u00ED.
 addconf.year = Nezadal jsi rok kon\u00E1n\u00ED.
 addconf.yearNumber = Rok mus\u00ED b\u00FDt mezi 1990 a 2020.
+
+addArticle.configFile = Nebyl vlo\u017Een konfigura\u010Dn\u00ED soubor
