--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <spring.version>4.1.1.RELEASE</spring.version>
     </properties>
 
+
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -97,13 +98,25 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>${log4j.version}</version>
+            <version>1.2.17</version>
         </dependency>
 
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>1.1.0.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
         </dependency>
 
     </dependencies>
