--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -7,3 +7,4 @@ addconf.year = Nezadal jsi rok kon\u00E1n\u00ED.
 addconf.yearNumber = Rok mus\u00ED b\u00FDt mezi 1990 a 2020.
 
 addArticle.configFile = Nebyl vlo\u017Een konfigura\u010Dn\u00ED soubor
+addArticle.conference = Nevybral jsi konferenci
